--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <img src="kings_league.png" alt="">
-        <h1>Kings League Brasil</h1>
+        <h1 id="titulo">KINGS LEAGUE </h1> <br>
+        <h1>BRASIL</h1>
     </header>
     <main>
         <section>
