--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 </head>
 <body>
     <header>
-        <img src="kings_league.png" alt="">
-        <h1 id="titulo">KINGS LEAGUE </h1> <br>
-        <h1>BRASIL</h1>
+        <div id="container">
+            <img src="kings_league (1).png" alt="logo">
+            <h1>KINGS LEAGUE <br> <strong>BRASIL</strong></h1>
+        </div>
     </header>
+    <nav>
+        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICCIAL</a>
+        <a href="">CLASSIFICAÇÃO</a>
+        <a href="">TIMES</a>
+        <a href="">NOTICIAS</a>
+    </nav>
     <main>
         <section>
-
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto optio ut reiciendis dicta necessitatibus natus officiis. Corporis hic accusamus earum excepturi maiores repellendus! Possimus veniam dolorem qui, delectus ipsam dolorum.</p>
         </section>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
