deixando main mais adequado

--- a/index.html
+++ b/index.html
@@ -23,29 +23,41 @@
     <main>
         <section>
             <h1>Como Surgiu a Kings League?</h1>
-            <p>A Kings League, criada pelo ex-jogador Gerard Piqué, vem ganhando destaque no futebol society internacional, principalmente com a organização da Kings World Cup Nations 2025. O campeonato reúne jogadores profissionais, antigos atletas e influenciadores digitais, oferecendo uma premiação de 1 milhão de dólares.</p>
-            <p>Desde que foi criada, a Kings League surgiu como resposta ao interesse por um estilo de futebol mais dinâmico e envolvente. O torneio ganhou rapidamente o apoio de criadores de conteúdo e do público, ao unir esporte e entretenimento de maneira inovadora.</p>
+            <p> &nbsp; A Kings League, criada pelo ex-jogador Gerard Piqué, vem ganhando destaque no futebol society internacional, principalmente com a organização da Kings World Cup Nations 2025. O campeonato reúne jogadores profissionais, antigos atletas e influenciadores digitais, oferecendo uma premiação de 1 milhão de dólares.</p>
+            <p> &nbsp; Desde que foi criada, a Kings League surgiu como resposta ao interesse por um estilo de futebol mais dinâmico e envolvente. O torneio ganhou rapidamente o apoio de criadores de conteúdo e do público, ao unir esporte e entretenimento de maneira inovadora.</p>
 
             <h1>Como Funciona(regras) ?</h1>
-            <p>O regulamento da competição prevê jogos com dois tempos de 20 minutos, começando com um goleiro e um jogador de linha por time, enquanto novos jogadores entram gradualmente a cada minuto.</p>
-            <p>Os técnicos podem lançar mão de “cartas secretas” para alterar o rumo da partida, e os presidentes das equipes — muitos deles influenciadores ou personalidades conhecidas — têm a chance de participar do jogo cobrando pênaltis</p>
+            <p> &nbsp; O regulamento da competição prevê jogos com dois tempos de 20 minutos, começando com um goleiro e um jogador de linha por time, enquanto novos jogadores entram gradualmente a cada minuto.</p>
+            <p> &nbsp; Os técnicos podem lançar mão de “cartas secretas” para alterar o rumo da partida, e os presidentes das equipes — muitos deles influenciadores ou personalidades conhecidas — têm a chance de participar do jogo cobrando pênaltis</p>
 
-            <img src="imagens/pique.jpg" alt="">
+            <picture>
+                <abbr title="Mundial Kings League">
+                    <img src="imagens/pique.jpg" alt="">
+                <abbr>
+            </picture>
 
             <h1>Primeira Edição de Kings League no Brasil</h1>
-            <p>A equipe Furia, representada por Neymar e Cris Guedes, conquistou o título da edição inaugural da Kings League Brazil na noite deste domingo (18), superando o Dendele FC por 2 a 1 no shootout após um empate de 5 a 5 no tempo regulamentar.</p>
-            <p>Mais de 30 mil torcedores encheram o Allianz Parque para celebrar o sucesso da Kings League Brazil. Neymar, que estava no estádio, participou da comemoração do título ao lado dos atletas.</p>
-            <p>Furia e Dendele agora se organizam para participar do Mundial de Clubes da Kings League, marcado para junho, em Paris, na França. As equipes Fluxo e Desimpedidos Goti também garantiram vaga na competição.</p>
+            <p> &nbsp; A equipe Furia, representada por Neymar e Cris Guedes, conquistou o título da edição inaugural da Kings League Brazil na noite deste domingo (18), superando o Dendele FC por 2 a 1 no shootout após um empate de 5 a 5 no tempo regulamentar.</p>
+            <p> &nbsp; Mais de 30 mil torcedores encheram o Allianz Parque para celebrar o sucesso da Kings League Brazil. Neymar, que estava no estádio, participou da comemoração do título ao lado dos atletas.</p>
+            <p> &nbsp; Furia e Dendele agora se organizam para participar do Mundial de Clubes da Kings League, marcado para junho, em Paris, na França. As equipes Fluxo e Desimpedidos Goti também garantiram vaga na competição.</p>
 
-            <img src="imagens/furia.jpg" alt="">
+            <picture>
+                <abbr title="Fúria primeira campeã">
+                    <img src="imagens/furia.jpg" alt="">
+                </abbr>
+            </picture>
 
             <h1>Mundial de Clubes Kings League</h1>
-            <p>KA Kings World Cup Clubs, competição anual que consagra o clube campeão mundial da Kings League, acontecerá na França em junho de 2025. O local do evento foi anunciado hoje durante a cerimônia de lançamento da Kings League France, realizada em Paris.</p>
-            <p>A Kings World Cup Clubs promete uma disputa intensa pelo título mundial, reunindo 32 equipes do universo da Kings League. Os times serão escolhidos entre as ligas nacionais já estabelecidas e também contarão com convidados especiais, conhecidos como “Wild Cards”. Os quatro melhores colocados da Kings League Brazil, ou seja, os semifinalistas, garantirão sua participação na Kings World Cup Clubs.</p>
+            <p> &nbsp; KA Kings World Cup Clubs, competição anual que consagra o clube campeão mundial da Kings League, acontecerá na França em junho de 2025. O local do evento foi anunciado hoje durante a cerimônia de lançamento da Kings League France, realizada em Paris.</p>
+            <p> &nbsp; A Kings World Cup Clubs promete uma disputa intensa pelo título mundial, reunindo 32 equipes do universo da Kings League. Os times serão escolhidos entre as ligas nacionais já estabelecidas e também contarão com convidados especiais, conhecidos como “Wild Cards”. Os quatro melhores colocados da Kings League Brazil, ou seja, os semifinalistas, garantirão sua participação na Kings World Cup Clubs.</p>
 
-            <img src="imagens/estadio-mundial.jpg" alt="">
+            <picture>
+                <abbr title="Estádio BBVA">
+                    <img src="imagens/estadio-mundial.jpg" alt="">
+                </abbr>
+            </picture>
 
-            <p>O Estádio BBVA em Monterrey que sediou a final da Copa do Mundo do México de 2024.</p>
+            <p> &nbsp; O Estádio BBVA em Monterrey que sediou a final da Copa do Mundo do México de 2024.</p>
         </section>
     </main>
     <footer>
