--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main>
         <section>
             <h1>Como Surgiu a Kings League?</h1>
-            <p> &nbsp; A Kings League, criada pelo ex-jogador Gerard Piqué, vem ganhando destaque no futebol society internacional, principalmente com a organização da Kings World Cup Nations 2025. O campeonato reúne jogadores profissionais, antigos atletas e influenciadores digitais, oferecendo uma premiação de 1 milhão de dólares.</p>
-            <p> &nbsp; Desde que foi criada, a Kings League surgiu como resposta ao interesse por um estilo de futebol mais dinâmico e envolvente. O torneio ganhou rapidamente o apoio de criadores de conteúdo e do público, ao unir esporte e entretenimento de maneira inovadora.</p>
+            <p> &nbsp; A<strong> Kings League</strong>, criada pelo ex-jogador <strong>Gerard Piqué</strong>, vem ganhando destaque no futebol society internacional, principalmente com a organização da <strong>Kings World Cup Nations 2025</strong>. O campeonato reúne jogadores profissionais, antigos atletas e influenciadores digitais, oferecendo uma premiação de 1 milhão de dólares.</p>
+            <p> &nbsp; Desde que foi criada, a <strong>Kings League</strong> surgiu como resposta ao interesse por um estilo de futebol mais dinâmico e envolvente. O torneio ganhou rapidamente o apoio de criadores de conteúdo e do público, ao unir esporte e entretenimento de maneira inovadora.</p>
 
             <h1>Como Funciona(regras) ?</h1>
             <p> &nbsp; O regulamento da competição prevê jogos com dois tempos de 20 minutos, começando com um goleiro e um jogador de linha por time, enquanto novos jogadores entram gradualmente a cada minuto.</p>
-            <p> &nbsp; Os técnicos podem lançar mão de “cartas secretas” para alterar o rumo da partida, e os presidentes das equipes — muitos deles influenciadores ou personalidades conhecidas — têm a chance de participar do jogo cobrando pênaltis</p>
+            <p> &nbsp; Os técnicos podem lançar mão de “cartas secretas” para alterar o rumo da partida, e os presidentes das equipes — muitos deles influenciadores ou personalidades conhecidas — têm a chance de participar do jogo cobrando pênaltis.</p>
 
             <picture>
                 <abbr title="Mundial Kings League">
@@ -37,9 +37,9 @@
             </picture>
 
             <h1>Primeira Edição de Kings League no Brasil</h1>
-            <p> &nbsp; A equipe Furia, representada por Neymar e Cris Guedes, conquistou o título da edição inaugural da Kings League Brazil na noite deste domingo (18), superando o Dendele FC por 2 a 1 no shootout após um empate de 5 a 5 no tempo regulamentar.</p>
-            <p> &nbsp; Mais de 30 mil torcedores encheram o Allianz Parque para celebrar o sucesso da Kings League Brazil. Neymar, que estava no estádio, participou da comemoração do título ao lado dos atletas.</p>
-            <p> &nbsp; Furia e Dendele agora se organizam para participar do Mundial de Clubes da Kings League, marcado para junho, em Paris, na França. As equipes Fluxo e Desimpedidos Goti também garantiram vaga na competição.</p>
+            <p> &nbsp; A equipe <strong>Furia</strong>, representada por <strong>Neymar</strong> e <strong>Cris Guedes</strong>, conquistou o título da edição inaugural da <strong>Kings League Brazil</strong> na noite deste domingo (18), superando o <strong>Dendele</strong> FC por 2 a 1 no shootout após um empate de 5 a 5 no tempo regulamentar.</p>
+            <p> &nbsp; Mais de 30 mil torcedores encheram o <strong>Allianz Parque</strong> para celebrar o sucesso da <strong>Kings League Brazil</strong>. <strong>Neymar</strong>, que estava no estádio, participou da comemoração do título ao lado dos atletas.</p>
+            <p> &nbsp; <strong>Furia</strong> e <strong>Dendele</strong> agora se organizam para participar do Mundial de Clubes da <strong>Kings League</strong>, marcado para junho, em <strong>Paris</strong>, na <strong>França</strong>. As equipes <strong>Fluxo</strong> e <strong>Desimpedidos Goti</strong> também garantiram vaga na competição.</p>
 
             <picture>
                 <abbr title="Fúria primeira campeã">
@@ -48,8 +48,8 @@
             </picture>
 
             <h1>Mundial de Clubes Kings League</h1>
-            <p> &nbsp; KA Kings World Cup Clubs, competição anual que consagra o clube campeão mundial da Kings League, acontecerá na França em junho de 2025. O local do evento foi anunciado hoje durante a cerimônia de lançamento da Kings League France, realizada em Paris.</p>
-            <p> &nbsp; A Kings World Cup Clubs promete uma disputa intensa pelo título mundial, reunindo 32 equipes do universo da Kings League. Os times serão escolhidos entre as ligas nacionais já estabelecidas e também contarão com convidados especiais, conhecidos como “Wild Cards”. Os quatro melhores colocados da Kings League Brazil, ou seja, os semifinalistas, garantirão sua participação na Kings World Cup Clubs.</p>
+            <p> &nbsp; <strong>KA Kings World Cup Clubs</strong>, competição anual que consagra o clube campeão mundial da <strong>Kings League</strong>, acontecerá na <strong>França</strong> em junho de 2025. O local do evento foi anunciado hoje durante a cerimônia de lançamento da <strong>Kings League France</strong>, realizada em <strong>Paris</strong>.</p>
+            <p> &nbsp; A <strong>Kings World Cup Clubs</strong> promete uma disputa intensa pelo título mundial, reunindo 32 equipes do universo da <strong>Kings League</strong>. Os times serão escolhidos entre as ligas nacionais já estabelecidas e também contarão com convidados especiais, conhecidos como <strong>“Wild Cards”</strong>. Os quatro melhores colocados da <strong>Kings League Brazil</strong>, ou seja, os semifinalistas, garantirão sua participação na<strong> Kings World Cup Clubs</strong>.</p>
 
             <picture>
                 <abbr title="Estádio BBVA">
@@ -57,7 +57,7 @@
                 </abbr>
             </picture>
 
-            <p> &nbsp; O Estádio BBVA em Monterrey que sediou a final da Copa do Mundo do México de 2024.</p>
+            <p> &nbsp; O <strong>Estádio BBVA</strong> em <strong>Monterrey</strong> que sediou a final da <strong>Copa do Mundo do México</strong> de 2024.</p>
         </section>
     </main>
     <footer>
