adquirindo todas imagens necessarias

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <nav>
-        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICCIAL</a>
+        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
         <a href="">CLASSIFICAÇÃO</a>
         <a href="">TIMES</a>
         <a href="">NOTICIAS</a>
