iniciando outras abas do site

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </header>
     <nav>
         <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
-        <a href="">CLASSIFICAÇÃO</a>
-        <a href="">TIMES</a>
-        <a href="">NOTICIAS</a>
+        <a href="classificação.html">CLASSIFICAÇÃO</a>
+        <a href="times.html">TIMES</a>
+        <a href="noticias.html">NOTICIAS</a>
     </nav>
     <main>
         <section>
