botão do voltar alterado

--- a/noticias.html
+++ b/noticias.html
@@ -15,8 +15,10 @@
         </div>
     </header>
     <nav>
+        <a href="index.html">
+            <img src="imagens/button-voltar.png" alt="">
+        </a>
         <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
         <a href="classificação.html">CLASSIFICAÇÃO</a>
         <a href="times.html">TIMES</a>
-        <a href="index.html" id="voltar">&#x21AA;</a>
     </nav>
