--- a/classificação.html
+++ b/classificação.html
@@ -15,8 +15,10 @@
         </div>
     </header>
     <nav>
+        <a href="index.html">
+            <img src="imagens/button-voltar.png" alt="">
+        </a>
         <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
         <a href="times.html">TIMES</a>
         <a href="noticias.html">NOTICIAS</a>
-        <a href="index.html">&#x21AA;</a>
     </nav>
