"site oficial" alterado de lugar

--- a/noticias.html
+++ b/noticias.html
@@ -18,7 +18,12 @@
         <a href="index.html">
             <img src="imagens/button-voltar.png" alt="">
         </a>
-        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
         <a href="classificação.html">CLASSIFICAÇÃO</a>
         <a href="times.html">TIMES</a>
     </nav>
+    <main>
+
+    </main>
+    <footer>
+        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
+    </footer>
