--- a/noticias.html
+++ b/noticias.html
@@ -25,5 +25,28 @@
 
     </main>
     <footer>
-        <a href="https://kingsleague.pro/pt/brazil" target="_blank">SITE OFICIAL</a>
+        <br>
+            <a href="#" id="i1"><img src="imagens/Kings League Brazil_files/logo-adidas.png" alt="adidas"></a>
+
+            <a href="#" id="i2"><img src="imagens/Kings League Brazil_files/logoiFood-W.png" alt="ifood"></a>
+    
+            <a href="#" id="i3"><img src="imagens/Kings League Brazil_files/logoBIS-W.png" alt="bis"></a>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+            <a href="#" id="i4"><img src="imagens/Kings League Brazil_files/logoTrident-w.png" alt="trident"></a>
+        
+            <a href="#" id="i5"><img src="imagens/Kings League Brazil_files/logo-macdonalds.png" alt="mcdonalds"></a>
+
+            <a href="#" id="i6"><img src="imagens/Kings League Brazil_files/logoRedBull-W.png" alt="redbull"></a>
+
+
+            <div id="kl"> 
+                <a href="https://kingsleague.pro/pt/brazil" target="_blank">
+                    <img src="imagens/Kings League Brazil_files/Footer-kings-league-brazil.png" alt="">
+                </a>
+            </div>
     </footer>
