--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
                     <img src="imagens/Kings League Brazil_files/Footer-kings-league-brazil.png" alt="">
                 </a>
             </div>
+
+            <a href=""><img src="imagens/instagram.ico" alt=""></a>
+
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><img src="" alt=""></a>
     </footer>
 </body>
 </html>
