rede social instagram

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </a>
             </div>
 
-            <a href=""><img src="imagens/instagram.ico" alt=""></a>
+            <a href=""><img src="imagens/instagram.png" alt=""></a>
 
             <a href=""><img src="" alt=""></a>
 
