--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
             <a href=""><img src="imagens/instagram.png" alt=""></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="imagens/twitter.png" alt=""></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="youtube.png" alt=""></a>
 
             <a href=""><img src="" alt=""></a>
 
