imagens redes sociais posicionadas

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                 </a>
             </div>
 
-            <a href=""><img src="imagens/instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/kingsleague_br/" target="_blank" id="r1"><img src="imagens/instagram.png" alt="Intagram"></a>
 
-            <a href=""><img src="imagens/twitter.png" alt=""></a>
+            <a href="https://x.com/Kings_LeagueBR" target="_blank" id="r2"><img src="imagens/X.png" alt="X"></a>
 
-            <a href=""><img src="youtube.png" alt=""></a>
+            <a href="https://www.tiktok.com/@kingsleague_br" target="_blank" id="r3"><img src="imagens/tiktok.png" alt="Tiktok"></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href="https://www.youtube.com/@KingsLeagueBrazil" target="_blank" id="r4"><img src="imagens/youtube.png" alt="Youtube"></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href="https://www.twitch.tv/kingsleague_br" target="_blank" id="r5"><img src="imagens/twitch.png" alt="Twitch"></a>
     </footer>
 </body>
 </html>
