--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
             <a href="https://www.youtube.com/@KingsLeagueBrazil" target="_blank" id="r4"><img src="imagens/youtube.png" alt="Youtube"></a>
 
             <a href="https://www.twitch.tv/kingsleague_br" target="_blank" id="r5"><img src="imagens/twitch.png" alt="Twitch"></a>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eos repellat quisquam non illum sed inventore distinctio. Quod aliquam quae, ut repellendus ab error mollitia expedita optio libero maiores dolorum!</p>
     </footer>
 </body>
 </html>
