footer completo para teste

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <a href="https://www.twitch.tv/kingsleague_br" target="_blank" id="r5"><img src="imagens/twitch.png" alt="Twitch"></a>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eos repellat quisquam non illum sed inventore distinctio. Quod aliquam quae, ut repellendus ab error mollitia expedita optio libero maiores dolorum!</p>
+            <p>Site inspirado no <a href="https://kingsleague.pro/pt/brazil">Site Oficial</a> da Kings League Brasil, sobre efeito de algumas modificações, porêm, tentando entregar um site objetivo, interativo, simples e facíl de mexer.</p>
     </footer>
 </body>
 </html>
