--- a/times.html
+++ b/times.html
@@ -49,4 +49,16 @@
                     <img src="imagens/Kings League Brazil_files/Footer-kings-league-brazil.png" alt="">
                 </a>
             </div>
+
+            <a href="https://www.instagram.com/kingsleague_br/" target="_blank" id="r1"><img src="imagens/instagram.png" alt="Intagram"></a>
+
+            <a href="https://x.com/Kings_LeagueBR" target="_blank" id="r2"><img src="imagens/X.png" alt="X"></a>
+
+            <a href="https://www.tiktok.com/@kingsleague_br" target="_blank" id="r3"><img src="imagens/tiktok.png" alt="Tiktok"></a>
+
+            <a href="https://www.youtube.com/@KingsLeagueBrazil" target="_blank" id="r4"><img src="imagens/youtube.png" alt="Youtube"></a>
+
+            <a href="https://www.twitch.tv/kingsleague_br" target="_blank" id="r5"><img src="imagens/twitch.png" alt="Twitch"></a>
+
+            <p>Site inspirado no <a href="https://kingsleague.pro/pt/brazil">Site Oficial</a> da Kings League Brasil, sobre efeito de algumas modificações, porêm, tentando entregar um site objetivo, interativo, simples e facíl de mexer.</p>
     </footer>
