--- a/classificação.html
+++ b/classificação.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="classificação.css">
+    <link rel="stylesheet" href="estilos/classificação.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Kings League</title>
 </head>
