dando iniciativa a tabela de classificação

--- a/classificação.html
+++ b/classificação.html
@@ -22,7 +22,164 @@
         <a href="noticias.html">NOTICIAS</a>
     </nav>
     <main>
-
+        <section>
+            <h1>Classificação</h1>
+            <table>
+                <tr id="titulo">    
+                    <th>POSC</th>
+                    <th colspan="2">TIME</th>
+                    <th>PTS</th>
+                    <th>PJ</th>
+                    <th>V</th>
+                    <th>VP</th>
+                    <th>DP</th>
+                    <th>D</th>
+                    <th>GP</th>
+                    <th>GC</th>
+                    <th>SG</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><img src="imagens/pqn-furia.png" alt="Furia FC"></td>
+                    <td>Furia FC</td>
+                    <td>25</td>
+                    <td>9</td>
+                    <td>8</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>48</td>
+                    <td>24</td>
+                    <td>24</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img src="imagens/pqn-g3x.png" alt="G3X FC"></td>
+                    <td>G3X FC</td>
+                    <td>21</td>
+                    <td>9</td>
+                    <td>7</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>54</td>
+                    <td>30</td>
+                    <td>24</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="imagens/pqn-nyvelados.png" alt="Nyvelados"></td>
+                    <td>Nyvelados</td>
+                    <td>18</td>
+                    <td>9</td>
+                    <td>5</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>34</td>
+                    <td>31</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><img src="imagens/pqn-desimpedidos.png" alt="Desimpedidos Goti"></td>
+                    <td>Desimpedidos Goti</td>
+                    <td>16</td>
+                    <td>9</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>3</td>
+                    <td>31</td>
+                    <td>31</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="imagens/pqn-capim.png" alt="Capim FC"></td>
+                    <td>Capim FC</td>
+                    <td>12</td>
+                    <td>9</td>
+                    <td>4</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>5</td>
+                    <td>30</td>
+                    <td>33</td>
+                    <td>-3</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td><img src="imagens/pqn-fluxo.png" alt="Fluxo FC"></td>
+                    <td>Fluxo FC</td>
+                    <td>12</td>
+                    <td>9</td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>32</td>
+                    <td>37</td>
+                    <td>-5</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="imagens/pqn-dendele.png" alt="Dendele FC"></td>
+                    <td>Dendele FC</td>
+                    <td>12</td>
+                    <td>9</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>29</td>
+                    <td>37</td>
+                    <td>-8</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="imagens/pqn-realelite.png" alt="FC Real Elite"></td>
+                    <td>FC Real Elite</td>
+                    <td>10</td>
+                    <td>9</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>4</td>
+                    <td>38</td>
+                    <td>40</td>
+                    <td>-2</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><img src="imagens/pqn-funkbol.png" alt="Funkbol Clube"></td>
+                    <td>Funkbol Clube</td>
+                    <td>5</td>
+                    <td>9</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>7</td>
+                    <td>39</td>
+                    <td>56</td>
+                    <td>-17</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><img src="imagens/pqn-loud.png" alt="Loud SC"></td>
+                    <td>Loud SC</td>
+                    <td>4</td>
+                    <td>9</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>34</td>
+                    <td>50</td>
+                    <td>-16</td>
+                </tr>
+            </table>
+        </section>
     </main>
     <footer>
         <br>
