--- a/classificação.html
+++ b/classificação.html
@@ -27,17 +27,17 @@
             <div id="tbl">
                 <table>
                     <tr id="titulo">
-                        <th>POSIÇ</th>
-                        <th colspan="2">TIME</th>
-                        <th>PTS</th>
-                        <th>PJ</th>
-                        <th>V</th>
-                        <th>VP</th>
-                        <th>DP</th>
-                        <th>D</th>
-                        <th>GP</th>
-                        <th>GC</th>
-                        <th>SG</th>
+                        <th scope="col">POSIÇ</th>
+                        <th colspan="2" scope="colgroup">TIME</th>
+                        <th scope="col">PTS</th>
+                        <th scope="col">PJ</th>
+                        <th scope="col">V</th>
+                        <th scope="col">VP</th>
+                        <th scope="col">DP</th>
+                        <th scope="col">D</th>
+                        <th scope="col">GP</th>
+                        <th scope="col">GC</th>
+                        <th scope="col">SG</th>
                     </tr>
                     <tr>
                         <td class="posiç"
@@ -182,6 +182,7 @@
                     </tr>
                 </table>
             </div>
+            <p><strong id="psf">|</strong> Playoff: Semi Final &nbsp; <strong id="pqf">|</strong> Playoff: Quartas de final</p>
         </section>
     </main>
     <footer>
