--- a/classificação.html
+++ b/classificação.html
@@ -28,7 +28,7 @@
                 <table>
                     <tr id="titulo">
                         <th scope="col">POSIÇ</th>
-                        <th colspan="2" scope="colgroup">TIME</th>
+                        <th scope="col">TIME</th>
                         <th scope="col">PTS</th>
                         <th scope="col">PJ</th>
                         <th scope="col">V</th>
@@ -42,7 +42,6 @@
                     <tr>
                         <td class="posiç"
                         id="sf">1</td>
-                        <td><img src="imagens/pqn-furia.png" alt="Furia FC"></td>
                         <td class="time">Furia FC</td>
                         <td class="pts">25</td>
                         <td>9</td>
@@ -56,7 +55,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">2</td>
-                        <td><img src="imagens/pqn-g3x.png" alt="G3X FC"></td>
                         <td class="time">G3X FC</td>
                         <td class="pts">21</td>
                         <td>9</td>
@@ -70,7 +68,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">3</td>
-                        <td><img src="imagens/pqn-nyvelados.png" alt="Nyvelados"></td>
                         <td class="time">Nyvelados</td>
                         <td class="pts">18</td>
                         <td>9</td>
@@ -84,7 +81,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">4</td>
-                        <td><img src="imagens/pqn-desimpedidos.png" alt="Desimpedidos Goti"></td>
                         <td class="time">Desimpedidos Goti</td>
                         <td class="pts">16</td>
                         <td>9</td>
@@ -97,8 +93,7 @@
                         <td>0</td>
                     </tr>
                     <tr>
-                        <td class="posiç" id="qf">5</td>
-                        <td><img src="imagens/pqn-capim.png" alt="Capim FC"></td>
+                        <td class="posiç" id="qf">5</td>               
                         <td class="time">Capim FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -112,7 +107,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">6</td>
-                        <td><img src="imagens/pqn-fluxo.png" alt="Fluxo FC"></td>
                         <td class="time">Fluxo FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -126,7 +120,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">7</td>
-                        <td><img src="imagens/pqn-dendele.png" alt="Dendele FC"></td>
                         <td class="time">Dendele FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -140,7 +133,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">8</td>
-                        <td><img src="imagens/pqn-realelite.png" alt="FC Real Elite"></td>
                         <td class="time">FC Real Elite</td>
                         <td class="pts">10</td>
                         <td>9</td>
@@ -154,7 +146,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">9</td>
-                        <td><img src="imagens/pqn-funkbol.png" alt="Funkbol Clube"></td>
                         <td class="time">Funkbol Clube</td>
                         <td class="pts">5</td>
                         <td>9</td>
@@ -168,7 +159,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">10</td>
-                        <td><img src="imagens/pqn-loud.png" alt="Loud SC"></td>
                         <td class="time">Loud SC</td>
                         <td class="pts">4</td>
                         <td>9</td>
