imagens de playoffs colocadas

--- a/classificação.html
+++ b/classificação.html
@@ -173,6 +173,12 @@
                 </table>
             </div>
             <p><strong id="psf">|</strong> Playoff: Semi Final &nbsp; <strong id="pqf">|</strong> Playoff: Quartas de final</p>
+
+            <h1>Playoff</h1>
+
+            <img src="imagens/Kings League Brazil_files/C-KINGS-BRA-7.png" alt="">
+
+            <h1>Estatísticas</h1>
         </section>
     </main>
     <footer>
