primeiro passo na estastiticas de jogadores - teste celular

--- a/classificação.html
+++ b/classificação.html
@@ -172,6 +172,7 @@
                     </tr>
                 </table>
             </div>
+
             <p><strong id="psf">|</strong> Playoff: Semi Final &nbsp; <strong id="pqf">|</strong> Playoff: Quartas de final</p>
 
             <h1>Playoff</h1>
@@ -179,6 +180,28 @@
             <img src="imagens/Kings League Brazil_files/C-KINGS-BRA-7.png" alt="">
 
             <h1>Estatísticas</h1>
+
+            <div id="esta">
+                <div id="d1">
+                    <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
+                </div>
+                <div id="d1">
+                    <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
+                </div>
+                <div id="d2">
+                    <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
+                </div>
+            </div>
+            <div id="esta2">
+                <div id="d3">
+                    <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
+                </div>
+                <div id="d4">
+                    <img src="imagens/Kings League Brazil_files/C-canhoto.png" alt="canhoto">
+                </div>
+                <div id="d5">
+                    <img src="imagens/Kings League Brazil_files/C-brinquinho.png" alt="brinquinho">
+                </div>
         </section>
     </main>
     <footer>
