colocado fundo no jogador

--- a/classificação.html
+++ b/classificação.html
@@ -185,23 +185,27 @@
                 <div id="d1">
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
-                <div id="d1">
+                <div id="d2">
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
-                <div id="d2">
-                    <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
-                </div>
             </div>
+
             <div id="esta2">
                 <div id="d3">
-                    <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
+                    <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
                 </div>
                 <div id="d4">
+                    <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
+                </div>
+            </div>
+                
+            <div id="esta3">
+                <div id="d5">
                     <img src="imagens/Kings League Brazil_files/C-canhoto.png" alt="canhoto">
                 </div>
-                <div id="d5">
+                <div id="d6">
                     <img src="imagens/Kings League Brazil_files/C-brinquinho.png" alt="brinquinho">
-                </div>
+            </div>
         </section>
     </main>
     <footer>
