continuidade nas estastiticas

--- a/classificação.html
+++ b/classificação.html
@@ -184,27 +184,33 @@
 
             <div id="esta">
                 <div id="d1">
+                    <h1>MVP</h1>
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
                 <div id="d2">
+                    <h1>MÁXIMO ARTLHEIRO</h1>
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
             </div>
 
             <div id="esta2">
                 <div id="d3">
+                    <h1>MÁXIMO ASSITENTE</h1>
                     <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
                 </div>
                 <div id="d4">
+                    <h1>MELHOR GOLEIRO</h1>
                     <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
                 </div>
             </div>
                 
             <div id="esta3">
                 <div id="d5">
+                    <h1>CARTÃO</h1>
                     <img src="imagens/Kings League Brazil_files/C-canhoto.png" alt="canhoto">
                 </div>
                 <div id="d6">
+                    <h1>DRIBLE</h1>
                     <img src="imagens/Kings League Brazil_files/C-brinquinho.png" alt="brinquinho">
             </div>
         </section>
