--- a/classificação.html
+++ b/classificação.html
@@ -188,7 +188,7 @@
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
                 <div id="d2">
-                    <h1>MÁXIMO ARTLHEIRO</h1>
+                    <h1>ARTLHEIRO</h1>
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
                 </div>
             </div>
