--- a/classificação.html
+++ b/classificação.html
@@ -195,7 +195,7 @@
 
             <div id="esta2">
                 <div id="d3">
-                    <h1>MÁXIMO ASSITENTE</h1>
+                    <h1>MELHOR ASSITENTE</h1>
                     <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
                 </div>
                 <div id="d4">
