--- a/classificação.html
+++ b/classificação.html
@@ -29,7 +29,7 @@
                 <table>
                     <tr id="titulo">
                         <th scope="col">POSIÇ</th>
-                        <th scope="col">TIME</th>
+                        <th scope="col" colspan="2">TIME</th>
                         <th scope="col">PTS</th>
                         <th scope="col">PJ</th>
                         <th scope="col">V</th>
@@ -41,8 +41,8 @@
                         <th scope="col">SG</th>
                     </tr>
                     <tr>
-                        <td class="posiç"
-                        id="sf">1</td>
+                        <td class="posiç"id="sf">1</td>
+                        <td><img src="imagens/favicon-furia.ico" alt=""></td>
                         <td class="time">Furia FC</td>
                         <td class="pts">25</td>
                         <td>9</td>
@@ -56,6 +56,7 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">2</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">G3X FC</td>
                         <td class="pts">21</td>
                         <td>9</td>
@@ -69,6 +70,7 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">3</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Nyvelados</td>
                         <td class="pts">18</td>
                         <td>9</td>
@@ -82,6 +84,7 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">4</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Desimpedidos Goti</td>
                         <td class="pts">16</td>
                         <td>9</td>
@@ -94,7 +97,8 @@
                         <td>0</td>
                     </tr>
                     <tr>
-                        <td class="posiç" id="qf">5</td>               
+                        <td class="posiç" id="qf">5</td>   
+                        <td><img src="" alt=""></td>            
                         <td class="time">Capim FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -108,6 +112,7 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">6</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Fluxo FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -121,6 +126,7 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">7</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Dendele FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -134,6 +140,7 @@
                     </tr>
                     <tr>
                         <td class="posiç">8</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">FC Real Elite</td>
                         <td class="pts">10</td>
                         <td>9</td>
@@ -147,6 +154,7 @@
                     </tr>
                     <tr>
                         <td class="posiç">9</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Funkbol Clube</td>
                         <td class="pts">5</td>
                         <td>9</td>
@@ -160,6 +168,7 @@
                     </tr>
                     <tr>
                         <td class="posiç">10</td>
+                        <td><img src="" alt=""></td>
                         <td class="time">Loud SC</td>
                         <td class="pts">4</td>
                         <td>9</td>
@@ -186,10 +195,19 @@
                 <div id="d1">
                     <h1>MVP</h1>
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Leleti</h2>
+                        </div>
                 </div>
+
                 <div id="d2">
                     <h1>ARTLHEIRO</h1>
                     <img src="imagens/Kings League Brazil_files/C-leleti.png" alt="leleti">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Leleti</h2>
+                        </div>
                 </div>
             </div>
 
@@ -197,10 +215,19 @@
                 <div id="d3">
                     <h1>MELHOR ASSITENTE</h1>
                     <img src="imagens/Kings League Brazil_files/C-lipão.png" alt="lipão">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Lipão</h2>
+                        </div>
                 </div>
+
                 <div id="d4">
                     <h1>MELHOR GOLEIRO</h1>
                     <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Igor Rezende</h2>
+                        </div>
                 </div>
             </div>
                 
@@ -208,10 +235,19 @@
                 <div id="d5">
                     <h1>CARTÃO</h1>
                     <img src="imagens/Kings League Brazil_files/C-canhoto.png" alt="canhoto">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Canhoto</h2>
+                        </div>
                 </div>
+
                 <div id="d6">
                     <h1>DRIBLE</h1>
                     <img src="imagens/Kings League Brazil_files/C-brinquinho.png" alt="brinquinho">
+                        <div class="container2">
+                            <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                            <h2>Brinquinho</h2>
+                        </div>
             </div>
         </section>
     </main>
