finalizado pagina de classificação

--- a/classificação.html
+++ b/classificação.html
@@ -42,7 +42,6 @@
                     </tr>
                     <tr>
                         <td class="posiç"id="sf">1</td>
-                        <td><img src="imagens/favicon-furia.ico" alt=""></td>
                         <td class="time">Furia FC</td>
                         <td class="pts">25</td>
                         <td>9</td>
@@ -56,7 +55,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">2</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">G3X FC</td>
                         <td class="pts">21</td>
                         <td>9</td>
@@ -70,7 +68,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">3</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Nyvelados</td>
                         <td class="pts">18</td>
                         <td>9</td>
@@ -84,7 +81,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">4</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Desimpedidos Goti</td>
                         <td class="pts">16</td>
                         <td>9</td>
@@ -97,8 +93,7 @@
                         <td>0</td>
                     </tr>
                     <tr>
-                        <td class="posiç" id="qf">5</td>   
-                        <td><img src="" alt=""></td>            
+                        <td class="posiç" id="qf">5</td>       
                         <td class="time">Capim FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -112,7 +107,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">6</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Fluxo FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -126,7 +120,6 @@
                     </tr>
                     <tr>
                         <td class="posiç" id="qf">7</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Dendele FC</td>
                         <td class="pts">12</td>
                         <td>9</td>
@@ -140,7 +133,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">8</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">FC Real Elite</td>
                         <td class="pts">10</td>
                         <td>9</td>
@@ -154,7 +146,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">9</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Funkbol Clube</td>
                         <td class="pts">5</td>
                         <td>9</td>
@@ -168,7 +159,6 @@
                     </tr>
                     <tr>
                         <td class="posiç">10</td>
-                        <td><img src="" alt=""></td>
                         <td class="time">Loud SC</td>
                         <td class="pts">4</td>
                         <td>9</td>
@@ -225,7 +215,7 @@
                         <h1>MELHOR GOLEIRO</h1>
                         <img src="imagens/Kings League Brazil_files/C-igor-rezende.png" alt="igor rezende">
                             <div class="container2">
-                                <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                                <img src="imagens/favicon-g3x.ico" alt="furia" class="semfundo">
                                 <h2>Igor Rezende</h2>
                             </div>
                     </div>
@@ -236,7 +226,7 @@
                         <h1>CARTÃO</h1>
                         <img src="imagens/Kings League Brazil_files/C-canhoto.png" alt="canhoto">
                             <div class="container2">
-                                <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                                <img src="imagens/favicon-dendele.ico" alt="furia" class="semfundo">
                                 <h2>Canhoto</h2>
                             </div>
                     </div>
@@ -245,7 +235,7 @@
                         <h1>DRIBLE</h1>
                         <img src="imagens/Kings League Brazil_files/C-brinquinho.png" alt="brinquinho">
                             <div class="container2">
-                                <img src="imagens/favicon-furia.ico" alt="furia" class="semfundo">
+                                <img src="imagens/favicon-capim.ico" alt="furia" class="semfundo">
                                 <h2>Brinquinho</h2>
                             </div>
                 </div>
