--- a/classificação.html
+++ b/classificação.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/classificação.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="retrato.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/retrato(classificação).css" media="screen and (orientation: portrait)">
     <title>Kings League</title>
 </head>
 <body>
